syntax = "proto3";

package auth;

option go_package = "./";

service AuthService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
  string email = 1;
}

message LoginResponse {
  string otp = 1;
}

message RegisterRequest {
  string email = 1;
}

message RegisterResponse {
  string otp = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  string email = 1;
}